examples/test/testpolicy19256.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19256
  namespace: namespace142
spec:
  podSelector:
    matchLabels:
      key3: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value33
          key42: value22
      podSelector:
        matchLabels:
          key44: value32
          key46: value37
          key7: value9
